# pipewire-rs

./: .gitlab-ci.yml  Cargo.toml
libspa/: Cargo.toml
libspa-sys/: Cargo.toml  build.rs
libspa/src/: lib.rs
libspa/src/pod/: builder.rs
libspa/src/utils/: dict.rs
pipewire/: Cargo.toml
pipewire-sys/: Cargo.toml
pipewire/examples/: pw-mon.rs  tone.rs
pipewire/src/: client.rs  core.rs  lib.rs  loop_.rs  metadata.rs  permissions.rs  properties.rs  stream.rs
