[package]
name = "libspa-sys"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
links = "libspa-0.2"
categories.workspace = true
description = "Rust FFI bindings for libspa"
repository.workspace = true
license.workspace = true
readme = "README.md"
homepage.workspace = true
documentation = "https://pipewire.pages.freedesktop.org/pipewire-rs/libspa_sys/"
keywords = ["ffi", "pipewire", "multimedia", "audio", "video"]

[dependencies]

[build-dependencies]
bindgen = { version = "0.69", default-features = false, features = ["experimental", "runtime"] }
cc = "1.0"
system-deps = "6"

[package.metadata.system-deps]
libspa = { name = "libspa-0.2", version = "0.2" }
libpipewire = { name = "libpipewire-0.3", version = "0.3" }

[lib]
doctest = false # https://github.com/rust-lang/rust-bindgen/issues/1313

[features]
v0_3_65 = []