[package]
name = "pipewire-sys"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
links = "pipewire-0.3"
categories.workspace = true
description = "Rust FFI bindings for PipeWire"
repository.workspace = true
license.workspace = true
readme = "README.md"
homepage.workspace = true
documentation = "https://pipewire.pages.freedesktop.org/pipewire-rs/pipewire_sys/"
keywords = ["ffi", "pipewire", "multimedia", "audio", "video"]

[dependencies]
spa_sys = { package = "libspa-sys", version = "0.8", path = "../libspa-sys" }

[build-dependencies]
bindgen = { version = "0.69", default-features = false, features = ["runtime"] }
system-deps = "6"

[package.metadata.system-deps]
libpipewire = { name = "libpipewire-0.3", version = "0.3" }

[lib]
doctest = false # https://github.com/rust-lang/rust-bindgen/issues/1313
